# autoglm-cli

./: README.md  pyproject.toml
src/autoglm_cli/: client.py  main.py
