[project]
name = "autoglm-cli"
version = "0.1.0"
description = "CLI tool for AutoGLM API interaction"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.1.1",
    "typer>=0.19.2",
    "websocket-client>=1.8.0",
]

[project.scripts]
zion = "autoglm_cli.main:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.uv]
package = true
